# grpc-quic-rs

./: .clippy.toml  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/grpc-quic/: Cargo.toml
crates/grpc-quic-benches/: Cargo.toml
crates/grpc-quic-benches/benches/: handshake.rs  loss_bench.rs  loss_sim.rs  quic_latency.rs  tcp_latency.rs  transport_bench.rs
crates/grpc-quic-benches/proto/: bench.proto
crates/grpc-quic-benches/src/: lib.rs
crates/grpc-quic-client/: Cargo.toml
crates/grpc-quic-client/src/: channel.rs  error.rs  lib.rs  pool.rs  retry.rs
crates/grpc-quic-core/: Cargo.toml
crates/grpc-quic-core/src/: body.rs  client.rs  error.rs  lib.rs  server.rs
crates/grpc-quic-discovery/: Cargo.toml
crates/grpc-quic-discovery/src/: lib.rs  resolver.rs
crates/grpc-quic-metrics/: Cargo.toml
crates/grpc-quic-metrics/src/: lib.rs  prometheus.rs  tracing.rs
crates/grpc-quic-server/: Cargo.toml
crates/grpc-quic-server/src/: acceptor.rs  error.rs  lib.rs  server.rs  tests.rs
crates/grpc-quic-transport/: Cargo.toml
crates/grpc-quic-transport/src/: connection.rs  endpoint.rs  error.rs  lib.rs  tests.rs  tls.rs
crates/grpc-quic/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  crate-reference.md  design.md  getting-started.md  introduction.md  roadmap.md
examples/: Cargo.toml
examples/proto/: streaming.proto
examples/src/: client.rs  server.rs
scripts/: netem.sh
