[package]
name = "grpc-quic-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
grpc-quic = { path = "../grpc-quic", features = ["full"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
futures = { workspace = true }

hdrhistogram = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "quic_latency"
harness = false

[[bench]]
name = "tcp_latency"
harness = false

[[bench]]
name = "loss_sim"
harness = false

[[bench]]
name = "handshake"
harness = false
