[package]
name        = "grpc-quic-client"
description = "gRPC client over QUIC transport — QuicChannel tower::Service adapter"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
grpc-quic-core       = { path = "../grpc-quic-core" }
grpc-quic-transport  = { path = "../grpc-quic-transport" }
grpc-quic-metrics    = { path = "../grpc-quic-metrics" }
grpc-quic-discovery  = { path = "../grpc-quic-discovery" }

quinn       = { workspace = true }
tokio       = { workspace = true }
bytes       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }
tower       = { workspace = true }
http        = { workspace = true }
http-body   = { workspace = true }
tonic       = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
rcgen               = { workspace = true }
tokio-test          = { workspace = true }
tracing-subscriber  = { workspace = true }
