[package]
name        = "grpc-quic-core"
description = "HTTP/3 + gRPC core: h3 transport, body adaptation, stream management"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
h3         = { workspace = true }
h3-quinn   = { workspace = true }
quinn      = { workspace = true }
tokio      = { workspace = true }
bytes      = { workspace = true }
http       = { workspace = true }
http-body  = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
futures    = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
rcgen    = { workspace = true }
tokio    = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
