[package]
name        = "grpc-quic-metrics"
description = "Prometheus metrics and tracing spans for grpc-quic"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
prometheus  = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
