[package]
name        = "grpc-quic-server"
description = "gRPC server over QUIC transport — QuicServer that delegates to tonic Router"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
grpc-quic-core      = { path = "../grpc-quic-core", version = "0.1.0" }
grpc-quic-transport = { path = "../grpc-quic-transport", version = "0.1.0" }
grpc-quic-metrics   = { path = "../grpc-quic-metrics", version = "0.1.0" }

quinn       = { workspace = true }
h3          = { workspace = true }
h3-quinn    = { workspace = true }
tokio       = { workspace = true }
bytes       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }
tower       = { workspace = true }
http        = { workspace = true }
http-body   = { workspace = true }
tonic       = { workspace = true }

[dev-dependencies]
grpc-quic-client    = { path = "../grpc-quic-client", version = "0.1.0" }
rustls              = { workspace = true }
rcgen               = { workspace = true }
tokio               = { workspace = true }
tokio-test          = { workspace = true }
tracing-subscriber  = { workspace = true }
