[package]
name        = "grpc-quic-transport"
description = "QUIC transport primitives for grpc-quic: endpoints, connections, and TLS"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
quinn        = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = { workspace = true }
tokio        = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
futures      = { workspace = true }

[dev-dependencies]
rcgen        = { workspace = true }
tokio        = { workspace = true }
tokio-test   = { workspace = true }
tracing-subscriber = { workspace = true }
