[package]
name        = "grpc-quic"
description = "Custom QUIC transport for tonic gRPC — replaces TCP with QUIC streams"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
grpc-quic-transport = { path = "../grpc-quic-transport", version = "0.1.0" }
grpc-quic-client    = { path = "../grpc-quic-client", version = "0.1.0" }
grpc-quic-server    = { path = "../grpc-quic-server", version = "0.1.0" }
grpc-quic-metrics   = { path = "../grpc-quic-metrics", version = "0.1.0", optional = true }
grpc-quic-discovery = { path = "../grpc-quic-discovery", version = "0.1.0", optional = true }

[features]
default    = []
metrics    = ["dep:grpc-quic-metrics"]
discovery  = ["dep:grpc-quic-discovery"]
dev-certs  = ["grpc-quic-transport/dev-certs"]
full       = ["metrics", "discovery", "dev-certs"]
